--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
 							_this.uploadedFile =data.data.fileName;
 							_this.fileData = data.data.failDataArray;
 							console.log(data.data)
-							alert(`上传成功，生成${data.data.fileLength}个文件，点击下载`);
+							alert(`上传成功，生成${data.data.fileLength}个文件`);
 							// window.location.href="files_list.html";
 						}else{
 							alert('上传失败，请重新上传');
